<resources>
    <string name="app_name">ZAKER</string>
    <string name="playFun">玩乐</string>
    <string name="community">社区</string>
    <string name="hotspot">热点</string>
    <string name="subscriptiop">订阅</string>
<<<<<<< HEAD

=======
>>>>>>> 6ce7fc03856b45cd31f8039a607d17f3b0582b8e
    <string name="essence">精选</string>
    <string name="movieinformation">电影资讯</string>
    <string name="food">美食频道</string>
    <string name="beautiful_gril">美女</string>
    <string name="title">搜索文章和频道</string>
    <string name="search">搜索</string>
    <string name="news">新闻</string>
    <string name="fun">娱乐</string>
    <string name="technology">科技</string>
    <string name="money">财经</string>
    <string name="fashion">时尚</string>
    <string name="car">汽车</string>
    <string name="travel">旅游</string>
    <string name="life">生活</string>
    <string name="family">家居</string>
    <string name="sports">体育</string>
    <string name="art">文艺</string>
    <string name="say">段子</string>
    <string name="goodfood">美食</string>
    <string name="acg">ACG</string>
    <string name="general">综合</string>
    <string name="number">数码</string>
    <string name="intent">互联网</string>
    <string name="technolo">科学</string>
    <string name="imports">要闻</string>
    <string name="shares">股票</string>
    <string name="market">行情</string>
    <string name="top">头条</string>
    <string name="football">足球</string>
    <string name="basketball">篮球</string>
    <string name="multiple">综合</string>
    <string name="disport">娱乐</string>
    <string name="film">电影</string>
    <string name="TV">电视</string>
    <string name="star">明星</string>
<<<<<<< HEAD

    <string name="action_strock">边框模式</string>
    <string name="action_fill">填充模式</string>
    <string name="fouse">关注</string>
    <string name="clear">清除搜索历史</string>
=======
    <string name="action_strock">边框模式</string>
    <string name="action_fill">填充模式</string>
    <string name="fouse">关注</string>
    <string name="devide">分类</string>

>>>>>>> 6ce7fc03856b45cd31f8039a607d17f3b0582b8e


</resources>
