<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/fifteen_five_dp">
    <FrameLayout
        android:id="@+id/frame_relax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </FrameLayout>
       <RadioGroup
        android:layout_above="@+id/frame_relax"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_fivedp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_disport"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"


            android:text="@string/disport"
            android:textSize="@dimen/twenty_sp"

            />

        <RadioButton
            android:id="@+id/radio_film"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/film"
            android:textSize="@dimen/twenty_sp"
            />

        <RadioButton
            android:id="@+id/radio_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/TV"
            android:textSize="@dimen/twenty_sp"
            />

        <RadioButton
            android:id="@+id/radio_star"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/star"
            android:textSize="@dimen/twenty_sp"
            />

    </RadioGroup>
</RelativeLayout>