<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:padding="@dimen/tendp">
    <FrameLayout
        android:id="@+id/frame_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </FrameLayout>
    <RadioGroup
        android:layout_above="@+id/frame_sport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_fivedp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_top"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:checked="true"


            android:text="@string/top"
            android:textSize="@dimen/fifteen_sp"

            />

        <RadioButton
            android:id="@+id/radio_football"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/football"
            android:gravity="center"
            android:textSize="@dimen/fifteen_sp"
            />

        <RadioButton
            android:id="@+id/radio_basketball"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/basketball"
            android:gravity="center"
            android:textSize="@dimen/fifteen_sp"
            />

        <RadioButton
            android:id="@+id/radio_multiple"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/multiple"
            android:textSize="@dimen/fifteen_sp"
            />

    </RadioGroup>
</RelativeLayout>