<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:padding="@dimen/fifteen_five_dp">
    <FrameLayout
        android:id="@+id/frame_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </FrameLayout>
    <RadioGroup
        android:layout_above="@+id/frame_money"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_fivedp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_imports"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"


            android:text="@string/imports"
            android:textSize="@dimen/twenty_sp"

            />

        <RadioButton
            android:id="@+id/radio_shares"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/shares"
            android:textSize="@dimen/twenty_sp"
            />

        <RadioButton
            android:id="@+id/radio_market"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:text="@string/market"
            android:textSize="@dimen/twenty_sp"
            />



    </RadioGroup>
</RelativeLayout>